Anonymous | Login | 2021-01-19 02:47 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0024654 | Community | [OCCT] OCCT:Modeling Algorithms | public | 2014-02-22 10:54 | 2014-05-13 16:03 | ||||
Reporter | abv | ||||||||
Assigned To | apn | ||||||||
Priority | normal | Severity | minor | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | OS | OS Version | |||||||
Product Version | [OCCT] 6.7.0 | ||||||||
Target Version | [OCCT] 6.7.1 | Fixed in Version | [OCCT] 6.7.1 | ||||||
Summary | 0024654: Result of Boolean operation is invalid for bopargcheck if rotated | ||||||||
Description | The problem has been reported by Thomas Anderson on oce-dev list: https://groups.google.com/forum/#!topic/oce-dev/9jWmZeCG74M [^] The shape produced by cut of box from the cone is said to be invalid by boparcgcheck command if it is rotated (but valid in initial position). This is nonsense. | ||||||||
Steps To Reproduce | pcone aCone 2.50 14.0 14.0 trotate aCone 0 0 0 0 0 1 180 trotate aCone 0 0 0 0 1 0 -90 ttranslate aCone 20 0 0 box aBox 40 40 40 ttranslate aBox -20 -20 -48 bop aCone aBox bopcut aCut bopargcheck aCut # here the solid is good tcopy aCut aCut2 trotate aCut2 0 0 0 0 0 1 120 bopargcheck aCut2 # here the solid is bad #--------------------------------------------------- Use the following commands to reproduce the problem: # restore qf bopargcheck qf # # The result is: Faulties, that can not be treated by BOP, are detected. # but it should be: Shape(s) seem(s) to be valid for BOP. | ||||||||
Additional information and documentation updates | I. New features: no new features II. Changes: II.1. class BndLib - method: void BndLib::Add(const gp_Hypr& H, const Standard_Real P1, const Standard_Real P2, const Standard_Real Tol, Bnd_Box& B) - static function: Standard_Integer ComputeBox(const gp_Hypr& aHypr, const Standard_Real aT1, const Standard_Real aT2, Bnd_Box& aBox) The function computes bounding box for bounded hyperbola III. Modified entities: packages: BndLib | ||||||||
Tags | No tags attached. | ||||||||
Test case number | bugs modalg_5(010) bug24654 | ||||||||
Attached Files | ![]() | ||||||||
![]() |
||||||
|
![]() |
|
(0028004) abv (manager) 2014-02-22 11:32 |
Note: the problem is not platform-dependent; besides originally reported Kubuntu, the problem is reproduced on Windows (OCCT 6.7.0 vc9 win32 and current master vc10 win64) |
(0028041) pkv (developer) 2014-02-27 09:52 |
The branch CR24654 is ready to be reviewed. |
(0028042) emv (developer) 2014-02-27 10:04 |
Reviewed, please test. |
(0028054) mkv (tester) 2014-02-27 18:05 |
Dear BugMaster, Branch CR24654 (and products from GIT master) was compiled on Linux and Windows platforms and tested. SHA-1: 99c2f7475138db5656178b1eec582781dd5a1643 Number of compiler warnings: occt component : Linux: 29 (29 on master) Windows: 0 (0 on master) products component : Linux: 12 (12 on master) Windows: 2 (2 on master) Regressions/Differences: No regressions/differences Testing cases: http://occt-tests/CR24654-master-occt/Debian60-64/bugs/modalg_5/bug24654.html [^] http://occt-tests/CR24654-master-occt/Windows-32-VC9/bugs/modalg_5/bug24654.html [^] bugs modalg_5(010) bug24654: OK Testing on Linux: Total MEMORY difference: 383072580 / 382561432 Total CPU difference: 42639.44999999992 / 45146.74000000002 Testing on Windows: Total MEMORY difference: 429643348 / 428907772 Total CPU difference: 33020.5625 / 34671.40625 There are not differences in images found by testdiff. |
![]() |
|||
occt: master bf12f076
Timestamp: 2014-02-27 14:50:42 Author: pkv Committer: apn [ Details ] [ Diff ] |
0024654: Result of Boolean operation is invalid for bopargcheck if rotated class BndLib - method: void BndLib::Add(const gp_Hypr& H, const Standard_Real P1, const Standard_Real P2, const Standard_Real Tol, Bnd_Box& B) - static function: Standard_Integer ComputeBox(const gp_Hypr& aHypr, const Standard_Real aT1, const Standard_Real aT2, Bnd_Box& aBox) The function computes bounding box for bounded hyperbola Test case for issue CR24654 |
||
mod - src/BndLib/BndLib.cxx | [ Diff ] [ File ] | ||
add - tests/bugs/modalg_5/bug24654 | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2014-02-22 10:54 | abv | New Issue | |
2014-02-22 10:54 | abv | Assigned To | => ifv |
2014-02-22 11:32 | abv | Note Added: 0028004 | |
2014-02-27 09:46 | ifv | Assigned To | ifv => pkv |
2014-02-27 09:46 | ifv | Status | new => assigned |
2014-02-27 09:48 | pkv | Steps to Reproduce Updated | View Revisions |
2014-02-27 09:49 | pkv | File Added: qf | |
2014-02-27 09:50 | pkv | Additional Information Updated | View Revisions |
2014-02-27 09:50 | pkv | Status | assigned => resolved |
2014-02-27 09:52 | pkv | Note Added: 0028041 | |
2014-02-27 09:53 | pkv | Assigned To | pkv => emv |
2014-02-27 10:04 | emv | Note Added: 0028042 | |
2014-02-27 10:04 | emv | Assigned To | emv => mkv |
2014-02-27 10:04 | emv | Status | resolved => reviewed |
2014-02-27 18:05 | mkv | Note Added: 0028054 | |
2014-02-27 18:06 | mkv | Test case number | => bugs modalg_5(010) bug24654 |
2014-02-27 18:06 | mkv | Assigned To | mkv => bugmaster |
2014-02-27 18:06 | mkv | Status | reviewed => tested |
2014-03-03 13:25 | apn | Changeset attached | => occt master bf12f076 |
2014-03-03 13:25 | apn | Assigned To | bugmaster => apn |
2014-03-03 13:25 | apn | Status | tested => verified |
2014-03-03 13:25 | apn | Resolution | open => fixed |
2014-03-04 11:34 | shoogen | Note Added: 0028114 | |
2014-03-04 11:35 | shoogen | Note Edited: 0028114 | View Revisions |
2014-03-04 13:39 | shoogen | Note Edited: 0028114 | View Revisions |
2014-03-06 00:11 | shoogen | Note Deleted: 0028114 | |
2014-05-05 13:33 | aiv | Status | verified => closed |
2014-05-05 13:38 | aiv | Fixed in Version | => 6.7.1 |
2014-05-13 16:03 | kgv | Relationship added | related to 0024691 |
Copyright © 2000 - 2021 MantisBT Team |